--- a/main.css
+++ b/main.css
@@ -18,16 +18,18 @@ body
     font-family: Times;
   }
 
-
+/*
 div
 {
   background-color:darkgrey;
   padding:20px
 }
+*/
 
 .content
 {
   background-color: darkgrey;
+    padding:40px
 }
 
   Img
