--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-h1
-{
-  color: white;
-}
 
 title
 {
@@ -9,57 +5,75 @@ title
 }
 
 body
- {
-    text-align: center;
-    background: url("http://i.imgur.com/mleraBr.jpg");
-    background size: cover;
-    background position: center;
-    color: white;
-    font-family: Times;
-  }
+{
+  text-align: center;
+  background: url("http://i.imgur.com/mleraBr.jpg");
+  background size: cover;
+  background position: center;
+  color: white;
+  font-family: Times;
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+h1
+{
+  color: white;
+}
+
+h2
+{
+  color: white;
+}
+
+h3
+{
+  color: red;
+}
+
 
 /*
 div
 {
-  background-color:darkgrey;
+  background-color:black;
   padding:20px
 }
 */
 
 .content
 {
-  background-color: darkgrey;
-    padding:40px
+  background-color: #404040;
+  padding: 40px;
 }
 
-  Img
-  {
-    border-radius: 50%;
-  }
+Img
+{
+  border-radius: 50%;
+}
 
-  p
-  {
-    font-size: 30px
-  }
+p
+{
+  font-size: 30px
+}
 
-  Input
-  {
-    border: 0;
-    padding: 10px;
-    font-size: 18px;
-  }
+Input
+{
+  border: 0;
+  padding: 10px;
+  font-size: 18px;
+}
 
-  input[type="submit"]
-  {
-    background: red;
-    color: white;
-    font-family: Times;
-  }
+input[type="submit"]
+{
+  background: red;
+  color: white;
+  font-family: Times;
+}
 
-  input[placeholder]
-  {
-    font-family: times;
-  }
+input[placeholder]
+{
+  font-family: times;
+}
 
 a
 {
