--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ title
 body
 {
   text-align: center;
-  background: url("http://i.imgur.com/mleraBr.jpg");
+  background: url("https://ak1.picdn.net/shutterstock/videos/20299471/thumb/2.jpg");
   background size: cover;
   background position: center;
   color: white;
@@ -42,14 +42,30 @@ div
 
 .content
 {
-  background-color: #404040;
-  padding: 40px;
+  border-radius: 60px;
+  background-color: #262626;
+  padding: 80px;
 }
 
-Img
+img
 {
   border-radius: 50%;
+  max-width: 250px;
+  max-height: 250px;
 }
+
+/*
+.img-wrap
+{
+  position:relative;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  min-height: 100%;
+  min-width: 100%;
+  transform: translate(-50%, -50%);
+}
+*/
 
 p
 {
